UsuariosFase3/k8s/usuarios-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: usuarios-api
  namespace: fase3
spec:
  replicas: 1
  selector:
    matchLabels:
      app: usuarios-api
  template:
    metadata:
      labels:
        app: usuarios-api
    spec:
      containers:
        - name: usuarios-api
          image: fase3usuariosacr.azurecr.io/fase3-usuarios-img:latest
          ports:
            - containerPort: 8080

          resources:
            requests:
              cpu: 25m
              memory: 64Mi
            limits:
              cpu: 100m
              memory: 256Mi
