UsuariosFase3/k8s/usuarios-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: usuarios-service
spec:
  selector:
    app: usuarios-api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
